# AI-Express

./: .gitignore  .mcp.json  CLAUDE.md  PRD.md  demo.html
examples/: gemini_design_demo.html  gemini_design_demo_v2.html  gemini_design_demo_v3.html  gemini_image_test.py  gemini_test.py
灵感agent/: autonomous-product-loop.md  evolution-log.md  inspiration-agent.md  portfolio.md
紫薇/: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  docker-compose.yml  requirements.txt
经验总结/: Chrome证书缓存清理指南.md  Docker镜像源配置.md  Gitea-CICD-K3s基础设施搭建.md  K3s生产环境部署与排错.md  国内服务器CICD构建优化.md  多Agent协作全流程产品开发实践.md
项目开发plus/: .env.example  .gitignore  Makefile  config.yaml
项目开发plus/backend/: pyproject.toml
项目开发plus/backend/aiexpress/: config.py  event_bus.py  store.py
项目开发plus/backend/aiexpress/agents/: __init__.py  entry.py  state.py
项目开发plus/backend/aiexpress/agents/nodes/: _runner.py  design.py  product.py  research.py
项目开发plus/backend/aiexpress/agents/orchestrators/: phase0.py
项目开发plus/backend/aiexpress/claude/: service.py
项目开发plus/backend/aiexpress/prompts/: design.py  product.py  research.py
项目开发plus/backend/app/gateway/: main.py
项目开发plus/backend/app/gateway/routers/: files.py  threads.py
项目角色agent/: _dev-standards.md  _phase-transition-template.md  _protocol.md  _self-check-library.md  backend-dev-agent.md  design-agent.md  design-reviewer-agent.md  frontend-dev-agent.md  fullstack-dev-agent.md  page-design-agent.md  phase0-orchestrator.md  phase1-orchestrator.md  phase2-orchestrator.md  product-agent.md  research-agent.md  tech-architect-agent.md  使用文档.md  (+1 more)
(+589 files in other folders)
